--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,15 @@ h3 {
   display: flex;
   color: orangered;
   padding: 0.5rem 0;
+  padding-left: 1rem;
   font-size: large;
+  border: 1px solid orangered;
+  border-radius: 5px;
+  margin-top: 1rem;
+  cursor: move;
+}
+.grocery-item.dragging {
+  opacity: 0.5;
 }
 .title {
   width: 80%;
